# GitTool

./: .exemple.env  .gitignore  LICENSE  README.md  pyproject.toml
git_tool/: README.md  pyproject.toml
git_tool/src/git_tool/: main.py
src/git_tool/: main.py
